Fixed body scrollbar

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   align-items: center;
   font-family: "Outfit", serif;
   min-height:100vh;
+  margin:0;
 }
 
 .container {
